--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "homepage": "",
     "devDependencies": {
+        "@babel/preset-typescript": "^7.16.0",
         "@typescript-eslint/eslint-plugin": "^5.5.0",
         "@typescript-eslint/parser": "^5.5.0",
         "clean-webpack-plugin": "^3.0.0",
@@ -27,6 +28,7 @@
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-unicorn": "^39.0.0",
+        "eslint-webpack-plugin": "^3.1.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.2.0",
         "prettier": "2.2.1",
@@ -39,6 +41,10 @@
         "webpack-merge": "^5.7.3"
     },
     "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.16.0",
+        "@babel/plugin-transform-runtime": "^7.16.4",
+        "@babel/preset-env": "^7.16.4",
+        "babel-loader": "^8.2.3",
         "editorconfig": "^0.15.3",
         "eslint-config-airbnb-typescript": "^16.0.0"
     }
