--- a/package.json
+++ b/package.json
@@ -1,51 +1,55 @@
 {
-    "name": "NewsJS",
-    "version": "1.0.0",
-    "description": "",
-    "main": "webpack.base.config.js",
-    "scripts": {
-        "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-        "build": "webpack --config ./webpack.config.js --env mode=prod",
-        "lint": "eslint . --ext .ts"
-    },
-    "repository": {
-        "type": "git",
-        "url": ""
-    },
-    "keywords": [],
-    "author": "Aleh Serhiyenia",
-    "license": "ISC",
-    "homepage": "",
-    "devDependencies": {
-        "@babel/preset-typescript": "^7.16.0",
-        "@typescript-eslint/eslint-plugin": "^5.5.0",
-        "@typescript-eslint/parser": "^5.5.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^5.1.0",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.3",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-unicorn": "^39.0.0",
-        "eslint-webpack-plugin": "^3.1.1",
-        "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.2.0",
-        "prettier": "2.2.1",
-        "style-loader": "^2.0.0",
-        "ts-loader": "^9.2.6",
-        "typescript": "^4.5.2",
-        "webpack": "^5.37.1",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.7.3"
-    },
-    "dependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.16.0",
-        "@babel/plugin-transform-runtime": "^7.16.4",
-        "@babel/preset-env": "^7.16.4",
-        "babel-loader": "^8.2.3",
-        "editorconfig": "^0.15.3",
-        "eslint-config-airbnb-typescript": "^16.0.0"
-    }
+  "name": "NewsJS",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.base.config.js",
+  "scripts": {
+    "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
+    "build": "webpack --config ./webpack.config.js --env mode=prod",
+    "lint": "eslint . --ext .ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "keywords": [],
+  "author": "Aleh Serhiyenia",
+  "license": "ISC",
+  "homepage": "",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/runtime": "^7.12.5",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "identity-obj-proxy": "^3.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.1.0",
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.4.1",
+    "fork-ts-checker-webpack-plugin": "^6.3.4",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.2.0",
+    "prettier": "2.2.1",
+    "style-loader": "^2.0.0",
+    "typescript": "^4.5.2",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "editorconfig": "^0.15.3"
+  }
 }
