--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "license": "ISC",
   "homepage": "",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "identity-obj-proxy": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
@@ -38,9 +38,10 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.4.1",
-    "fork-ts-checker-webpack-plugin": "^6.3.4",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.4",
     "html-webpack-plugin": "^5.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "prettier": "2.2.1",
     "style-loader": "^2.0.0",
     "typescript": "^4.5.2",
@@ -50,6 +51,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "editorconfig": "^0.15.3"
   }
 }
